# fso-monitord

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  README  autogen.sh  configure.ac
data/: Makefile.am  dbus-hlid.conf  fso-monitord  org.freesmartphone.DBus.service.in  org.freesmartphone.dbus.service
src/: consts.vala  device.vala  fso.vala  gsm.vala  gypsy.vala  logger.vala  main.vala  monitor.vala  network.vala  obj.vala  phone.vala  preferences.vala  ressource.vala  time.vala  usage.vala
